updated the alignment issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -362,8 +362,8 @@ ul {
 .con,
 .hon,
 .text {
-    width: 300px;
-    height: 300px;
+    width: 150px;
+    height: 150px;
 	background-size: cover;
     background-repeat: no-repeat;
 }
@@ -412,7 +412,7 @@ ul {
 }
 
 .link-hp{
-    width: 100%;
+    max-width: 100%;
 	margin: 100px 20px;
 	padding: 10px;
 	font-size: 1.5em;
@@ -1569,6 +1569,18 @@ h2 {
         margin: -.5em 0 0;
         font-size: 2em;
     }
+    .ash,
+.chi,
+.ana,
+.soul,
+.con,
+.hon,
+.text {
+    width: 150px;
+    height: 150px;
+	background-size: cover;
+    background-repeat: no-repeat;
+}
 
     .sidenav {
         overflow: hidden;
@@ -1642,6 +1654,7 @@ h2 {
     .con,
     .hon,
     .text {
+        width: 300px;
         height: 300px;
 
     }
